{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 43,
  "lineage": "007de636-419c-1340-0c8f-6257335ec56b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b86aaed8ef90e45f",
            "arn": "arn:aws:ec2:us-east-1:905418196989:instance/i-0201dba0ddd17aa9d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0201dba0ddd17aa9d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-072cfe244832ede05",
            "private_dns": "ip-172-10-0-19.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.10.0.19",
            "public_ip": "54.92.144.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08527f01aa810a92b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0eb2a06c213ab33dd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0785f2b94bd862a90",
            "tags": {
              "Environment": "dev",
              "Name": "project1-web-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "project1-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb2a06c213ab33dd"
            ]
          },
          "dependencies": [
            "aws_key_pair.project1_key",
            "aws_security_group.web_sg",
            "aws_subnet.main",
            "aws_vpc.project1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418196989:internet-gateway/igw-060e00489ea451b19",
            "id": "igw-060e00489ea451b19",
            "owner_id": "905418196989",
            "tags": {
              "Environment": "dev",
              "Name": "project1-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "project1-igw"
            },
            "vpc_id": "vpc-09a6ddd6e4c40139f"
          },
          "dependencies": [
            "aws_vpc.project1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418196989:route-table/rtb-0953b83ac34a6852e",
            "id": "rtb-0953b83ac34a6852e",
            "owner_id": "905418196989",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060e00489ea451b19",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09a6ddd6e4c40139f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project1_igw",
            "aws_vpc.project1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014732197b678e4f5",
            "route_table_id": "rtb-0953b83ac34a6852e",
            "subnet_id": "subnet-0785f2b94bd862a90"
          },
          "dependencies": [
            "aws_internet_gateway.project1_igw",
            "aws_route_table.public",
            "aws_subnet.main",
            "aws_vpc.project1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418196989:security-group/sg-0eb2a06c213ab33dd",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb2a06c213ab33dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "project1-web-sg",
            "name_prefix": "",
            "owner_id": "905418196989",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "project1-web-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "project1-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a6ddd6e4c40139f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418196989:subnet/subnet-0785f2b94bd862a90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.10.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0785f2b94bd862a90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418196989",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-09a6ddd6e4c40139f"
          },
          "dependencies": [
            "aws_vpc.project1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418196989:vpc/vpc-09a6ddd6e4c40139f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.10.0.0/16",
            "default_network_acl_id": "acl-04aea509323904c2d",
            "default_route_table_id": "rtb-0087e93538f2e519b",
            "default_security_group_id": "sg-0140acb1a4c1c14dc",
            "dhcp_options_id": "dopt-0a8cbc159be9cedce",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a6ddd6e4c40139f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0087e93538f2e519b",
            "owner_id": "905418196989",
            "tags": {
              "Environment": "dev",
              "Name": "project1-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "project1-vpc"
            }
          }
        }
      ]
    }
  ]
}